# alien_invasion

./: Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yaml
alien_invasion/: alien.py  alien_invasion.py  bullet.py  button.py  game_stats.py  scoreboard.py  settings.py  ship.py
alien_invasion/scripts/: start_game.py
