[tool.poetry]
name = "alien-invasion"
version = "0.1.0"
description = ""
authors = ["alllexxx1 <alekkorpachyov@gmail.com>"]
readme = "README.md"
packages = [{include = "alien_invasion"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.1"

[tool.poetry.scripts]
start-game = "alien_invasion.scripts.start_game:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
setuptools = "^68.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
